# Physics-sim

./: CMakeLists.txt  LICENSE
src/: main.c
src/rendering/: camera.c  camera.h  renderer.c  renderer.h
src/simulation/: simulation.c  simulation.h
src/utils/: math_utils.c  math_utils.h
